--- a/output/archives.html
+++ b/output/archives.html
@@ -14,12 +14,15 @@
         <header id="banner" class="body">
                 <h1><a href="/">Kyle Richardon's Programming Blog </a></h1>
                 <nav><ul>
+                    <li><a href="/category/misc.html">misc</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for Kyle Richardon's Programming Blog</h1>
 
 <dl>
+    <dt>Sun 10 April 2016</dt>
+    <dd><a href="/my-very-first-post.html">My Very First Post</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
