--- a/output/archives.html
+++ b/output/archives.html
@@ -21,6 +21,8 @@
 <h1>Archives for Kyle Richardon's Programming Blog</h1>
 
 <dl>
+    <dt>Wed 13 April 2016</dt>
+    <dd><a href="/do-it-live.html">Do It Live</a></dd>
     <dt>Sun 10 April 2016</dt>
     <dd><a href="/my-very-first-post.html">My Very First Post</a></dd>
 </dl>
